fixing input on firefox

--- a/_sass/_newsletter.sass
+++ b/_sass/_newsletter.sass
@@ -19,10 +19,11 @@
     border: 1px solid $light-text
     color: $brand
     font-size: 2rem
-    padding: 2.4rem
+    padding: 1.3rem
     width: 70%
     display: inline-block
     margin-right: 1rem
+    height: auto !important
     @include transition(0.3s)
     @include placeholder
       color: $light-text
