adding endorsement widget and guardian logo

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -25,4 +25,5 @@
 		{% endif %}
 	</div>
 </div>
+<iframe src="https://eendorsements.com/feed/user/wade-betz" width="100%" height="500px" frameborder="0"></iframe>
 {% endfor %}
