--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -9,8 +9,8 @@
 	@include transition(0.3s)
 	&:hover
 		background: transparent
-		color: $brand-light
-		box-shadow: 4px 4px 0 $brand-light
+		color: $brand-dark
+		box-shadow: 4px 4px 0 $brand-dark
 		border: 2px solid $button-border
 		@include transform(scale(1.05))
 		@include transform(translateY(-0.2rem))
@@ -24,13 +24,13 @@
 		color: #fff
 
 .cta2
-	// background: $light-text
+	background: $brand
 	color: $secondary-button-text
 	padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
 	font-weight: 300
-	border: 2px solid $secondary-button-border
+	border: 2px solid $brand
 	@include transition(0.3s)
 	&:hover
 		background: transparent
