pls work, changing button-padding-width

--- a/_sass/buttons.sass
+++ b/_sass/buttons.sass
@@ -41,6 +41,6 @@
 .navbar-nav>li>a
 	font-size: 20px
 	margin-top: 12px
-	padding: $button-padding
+	padding: 15px
 	border-radius: $button-radius
 	@include transition
