--- a/_sass/buttons.sass
+++ b/_sass/buttons.sass
@@ -42,5 +42,5 @@
 	font-size: 20px
 	margin-top: 12px
 	padding: 15px
-	// border-radius: $button-radius
+	border-radius: $button-radius
 	@include transition
