--- a/css/main.sass
+++ b/css/main.sass
@@ -25,9 +25,8 @@ $theme-body-color: {{site.data.settings.site_colors.main_body_color}}
 $transparent-black: rgba(0,0,0,0.5)
 
 // button settings
-// $button-radius: {{site.data.settings.buttons.button_radius_number}}
-$button-padding-width: {{site.data.settings.buttons.button_padding_width_number}}
-$button-padding-height: {{site.data.settings.buttons.button_padding_height_number}}
+$button-radius: {{site.data.settings.buttons.button_radius_number}}
+$button-padding: {{site.data.settings.buttons.button_padding_number}}px
 $button-border: {{site.data.settings.buttons.button_border_color}}
 $button-background: {{site.data.settings.buttons.button_background_color}}
 $button-text: {{site.data.settings.buttons.button_text_color}}
