Updated 'css/main.sass' via CloudCannon

--- a/css/main.sass
+++ b/css/main.sass
@@ -25,7 +25,7 @@ $theme-body-color: {{site.data.settings.site_colors.main_body_color}}
 $transparent-black: rgba(0,0,0,0.5)
 
 // button settings
-$button-radius: {{site.data.settings.buttons.button_radius_number}}
+// $button-radius: {{site.data.settings.buttons.button_radius_number}}
 $button-padding: {{site.data.settings.buttons.button_padding_number}}px
 $button-border: {{site.data.settings.buttons.button_border_color}}
 $button-background: {{site.data.settings.buttons.button_background_color}}
