Updated 'css/main.sass' via CloudCannon

--- a/css/main.sass
+++ b/css/main.sass
@@ -33,7 +33,7 @@ $button-text: {{site.data.settings.buttons.button_text_color}}
 $secondary-button-border: {{site.data.settings.buttons.secondary_button_border_color}}
 $secondary-button-background: {{site.data.settings.buttons.secondary_button_background_color}}
 $secondary-button-text: {{site.data.settings.buttons.secondary_button_text_color}}
-$logo-width: {{site.data.settings.images.logo_width_number}}
+$logo-width: {{site.data.settings.images.logo_width_number}}rem
 // All the white text and fills, just incase you want to change it up. This effects almost everything though.
 $light-text: white
 
