--- a/css/main.sass
+++ b/css/main.sass
@@ -6,8 +6,6 @@
 $main-width: 120rem
 $nav-height: 5rem
 
-li
-	font-size: 18px
 //fonts
 $bodyfont: 'Source Sans Pro', helvetica, arial, sans-serif
 $headerfont: 'Source Sans Pro', helvetica, arial, sans-serif
@@ -40,7 +38,7 @@ $light-text: white
 $nav-background: transparentize(black, 0.2)
 $header-font-color: $light-text
 $footer-font-color: #353535
-$header-shadow: {{site.data.settings.header_shadow.h_shadow}} {{site.data.settings.header_shadow.w_shadow}} {{site.data.settings.header_shadow.shadow_spread}} {{site.data.settings.header_shadow.shadow_color}}
+$header-shadow: 0 2px 7px black
 $post-wrapper-border: #D8D8D8
 $footer-background: darken(#f3f3f3, 10%)
 $readmore-border-color: $footer-background
@@ -75,7 +73,6 @@ $icon-fill: $light-text
 @import "vendor/bourbon/bourbon"
 @import "vendor/owl.carousel"
 
-@import "cta-sidebar"
 @import "welcome-box"
 @import "media-player"
 @import "navigation"
