--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -24,13 +24,13 @@
 		color: #fff
 
 .cta2
-	// background: $light-text
+	background: $brand
 	color: $secondary-button-text
 	padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
 	font-weight: 300
-	border: 2px solid $secondary-button-border
+	border: 2px solid $brand
 	@include transition(0.3s)
 	&:hover
 		background: transparent
