Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 <div class="container footer">
 		 Greater Calgary Group<br>
 		 <strong>Your Home Sold or We'll Buy it!* Team</strong><br><br>
-		 <a href="mailto:office@greatercalgarygroup.com">office@greatercalgarygroup.com</a><br>
-		 <a href="http://www.GreaterCalgaryGroup.com">www.GreaterCalgaryGroup.com</a><br>
+		 <a href="mailto:info@greaterpropertygroup.com">info@greaterpropertygroup.com</a><br>
+		 <a href="http://www.greaterpropertygroup.com/calgary">www.greaterpropertygroup.com/calgary</a><br>
 		 8820 Blackfoot Trail SE Unit 115<br>
 		 Calgary, AB T2J 3J1<br>
 		 <a href="tel:403-818-9611">403-818-9611</a><br><br>
