Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 <div class="container footer">
 	Greater Vancouver Group<br>
  <strong>Your Home Sold or We'll Buy it!* Team</strong><br><br>
- <a href="mailto:sales@greatervancouvergroup.com">sales@greatervancouvergroup.com</a><br>
- <a href="http://www.GreaterVancouverGroup.com">www.GreaterVancouverGroup.com</a><br>
+ <a href="mailto:info@greaterpropertygroup.com">info@greaterpropertygroup.com</a><br>
+ <a href="http://www.greaterpropertygroup.com/Vancouver">www.greaterpropertygroup.com/Vancouver</a><br>
  102 - 321 Sixth Street<br>
  New Westminster, BC V3L 3A7<br>
  <a href="tel:604-809-8883">604-809-8883</a><br><br>
