Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 <div class="container footer">
 	Greater Toronto Group<br>
 			 <strong>Your Home Sold or We'll Buy it!* Team</strong><br><br>
-			 <a href="mailto:office@greatertorontogroup.com">office@greatertorontogroup.com</a><br>
-			 <a href="http://www.GreaterTorontoGroup.com">www.GreaterTorontoGroup.com</a><br>
+			 <a href="mailto:info@greaterpropertygroup.com">info@greaterpropertygroup.com</a><br>
+			 <a href="http://www.greaterpropertygroup.com/Toronto">www.greaterpropertygroup.com/Toronto</a><br>
 			 1697 Lakeshore Road W<br>
 			 Mississauga, ON L5J 1J4<br>
 			 <a href="tel:647-247-0103">647-247-0103</a><br><br>
