--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container-fluid footer">
 <div class="container footer">
-	Greater Toronto Group<br>
+	Greater Property Group Toronto<br>
 			 <strong>Your Home Sold or We'll Buy it!* Team</strong><br><br>
 			 <a href="mailto:info@greaterpropertygroup.com">info@greaterpropertygroup.com</a><br>
 			 <a href="http://www.greaterpropertygroup.com/Toronto">www.greaterpropertygroup.com/Toronto</a><br>
