--- a/_includes/contact-modal.html
+++ b/_includes/contact-modal.html
@@ -29,7 +29,9 @@
         {{site.data.settings.client.address}}
         <br>
       {% endif %}
-      <a href="tel:1-{{site.data.settings.client.phone}}">{{site.data.settings.client.phone}}</a>
+      {{site.data.settings.client.phone_type}}: <a href="tel:1-{{site.data.settings.client.phone}}">{{site.data.settings.client.phone}}</a>
+      <br>
+      {{site.data.settings.client.phone2_type}}: <a href="tel:1-{{site.data.settings.client.phone2}}">{{site.data.settings.client.phone}}</a>
       <br>
       <a href="mailto:{{site.data.settings.client.email}}">{{site.data.settings.client.email}}</a>
     </address>
