--- a/_sass/_newsletter.sass
+++ b/_sass/_newsletter.sass
@@ -19,8 +19,9 @@
 		border: 1px solid $light-text
 		color: $brand
 		font-size: 2rem
-		padding: 2.4rem
+		padding: 1.3rem
 		width: 70%
+		height: auto
 		display: inline-block
 		margin-right: 1rem
 		@include transition(0.3s)
