logo change and fdic added to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,6 +74,9 @@
 	      <div class="twelve columns footer-socials">
 	        {% include socials.html %}
 	    </div>
+			<div>
+				<img class="fdic-equal" src="http://i.imgur.com/02rTZvv.png"
+			</div>
 	  </div>
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
