--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -46,3 +46,7 @@
 	.navbar-header
 		a.navbar-brand
 			color: $theme
+
+.navbar-nav>li>.dropdown-menu
+	position: relative
+	background: transparent
