--- a/_sass/_about.sass
+++ b/_sass/_about.sass
@@ -2,7 +2,7 @@
 	border-radius: 50%
 	width: 200px
 	height: 200px
-	border: 3px solid $brand
+	// border: 3px solid $brand
 	// margin: 10px auto 0 6rem
 	overflow: hidden
 	display: inline-block
