--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,7 +75,7 @@
 	        {% include socials.html %}
 	    </div>
 			<div>
-				<img class="fdic-equal" src="http://i.imgur.com/02rTZvv.png"
+				<img class="fdic-equal" src="http://i.imgur.com/02rTZvv.png">
 			</div>
 	  </div>
 	  <div class="attribution">
