--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 							{% endif %}
 	        </div>
 	        <div class="col-sm-4">
-	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span>
+	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span><br>Each Office Independently Owned and Operated
 	        </div>
 	        <div class="col-sm-4">
 	          <address itemprop="address">{{site.data.settings.client.address}}</address>
@@ -49,7 +49,7 @@
 	          <span itemprop="brand">{{site.data.settings.client.brand}}</span>
 	        </div>
 	        <div class="col-sm-3">
-	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span>
+	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span><br>Each Office Independently Owned and Operated
 	        </div>
 	        <div class="col-sm-3">
 	          <address itemprop="address">{{site.data.settings.client.address}}</address>
