--- a/_sass/_cta-sidebar.sass
+++ b/_sass/_cta-sidebar.sass
@@ -5,11 +5,13 @@
 	display: flex
 	flex-wrap: wrap
 	margin-bottom: 20px
+	margin-top: 20px
 	overflow: hidden
 	.cta-img-container
 		a
 			img
 				max-width: 100%
+				width: 1000px
 	h5
 		// position: relative
 		// top: 0
