--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -15,10 +15,10 @@
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
-	color: $header-font-color
+	color: black
 	text-shadow: $header-shadow
 	text-transform: uppercase
-	font-size: 6.5rem
+	font-size: 5rem
 	padding-bottom: 4rem
 	margin-bottom: 0
 
