changing light hovers to dark, adding youtube and google links, changing logo to circle

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -3,18 +3,21 @@
 // 	max-width: 40rem
 
 .footer
-	color: #fff
+	color: #212121
 	.attribution
 		svg
-			fill: #fff
+			fill: #212121
 	.socials
 		svg
-			fill: #fff
+			fill: #212121
+			&:hover
+				background: #fff
 	a
-		color: #fff
+		color: #212121
 
 .newsletter
 	background: darken($theme, 3%)
+	color: #212121
 
 .navbar-left
 	li
