--- a/_sass/_socials.sass
+++ b/_sass/_socials.sass
@@ -15,9 +15,9 @@
 		border-radius: 50%
 		@include transition
 		&:hover
-			fill: $brand-light
+			fill: $brand-dark
 			background: transparent
-			color: $brand-light
+			color: $brand-dark
 			+shadow
 			// box-shadow: 4px 4px 0 $brand-light
 			// border: 2px solid $brand-light
