Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -115,3 +115,5 @@ src="https://www.facebook.com/tr?id=1340684649356362&ev=PageView&noscript=1"
 /></noscript>
 <!-- DO NOT MODIFY -->
 <!-- End Facebook Pixel Code -->
+
+<script src="//load.sumome.com/" data-sumo-site-id="8e9663525375f3740180529abbf60a7f081decb09e2c1a1b01236a973a8eb6a9" async="async"></script>
