--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,6 +75,9 @@
 	        {% include socials.html %}
 	    </div>
 	  </div>
+	  
+	  <img src="http://i.imgur.com/7PP0kAb.png" style="width:200px;">
+	  
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.brand}}</p>
@@ -101,5 +104,3 @@
 <script type="text/javascript" src="/js/media-player.js"></script>
 
 
-
-<img src="http://i.imgur.com/7PP0kAb.png">
