Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,7 +76,7 @@
 	    </div>
 	  </div>
 	  
-	  <img src="http://i.imgur.com/7PP0kAb.png" style="width:200px;">
+	  <img src="http://i.imgur.com/7PP0kAb.png" style="width:200px; margin-bottom:10px;">
 	  
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
