after blog review edits

--- a/_sass/_reviews.sass
+++ b/_sass/_reviews.sass
@@ -12,6 +12,12 @@
 .yelp-logo
 	@extend .zillow-logo
 
+.realtor-logo
+	@extend .zillow-logo
+
+#realtor-logo
+	width: 150px
+
 .review-button-wrapper
 	text-align: left
 	height: 75px
