--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -21,6 +21,7 @@
 	font-size: 6.5rem
 	padding-bottom: 4rem
 	margin-bottom: 0
+	font-weight: 400
 
 @media (max-width: 1100px)
 	.site-title
@@ -28,13 +29,13 @@
 
 @media (max-width: 1000px)
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 
 @media (max-width: 760px)
 	#hero
 		// height: 33rem
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 		margin-top: 4rem
 	.site-title
 		font-size: 5rem
@@ -43,7 +44,7 @@
 	#hero
 		// height: 31rem
 	.site-logo
-		max-width: 15rem
+		max-width: 20rem
 		margin-top: 2rem
 	.site-title
 		font-size: 3.5rem
