--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -37,7 +37,7 @@
 		<img src="{{cta.CTA_image_path2}}" alt="" />
 	</a>
 	</div>
-	<h5>{{cta.CTA_title2 | replace: '-- MARKET --', site.data.settings.client.market}}</h5>
+	<!-- <h5>{{cta.CTA_title2 | replace: '-- MARKET --', site.data.settings.client.market}}</h5> -->
 	<p>
 		{{cta.CTA_text2 | replace: '-- MARKET --', site.data.settings.client.market}}
 	</p>
