changing colors and background photo

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -3,23 +3,20 @@
 // 	max-width: 40rem
 
 .footer
-	color: #fff
+	color: #0C218E
 	.attribution
 		svg
-			fill: #fff
+			fill: #0C218E
 	.socials
 		svg
-			fill: #fff
+			fill: #0C218E
 	a
-		color: #fff
-
-.newsletter
-	background: darken($theme, 3%)
+		color: #0C218E
 
 .navbar-left
 	li
 		a
-			color: #fff
+			color: $brand
 
 
 
