--- a/_sass/_forms.sass
+++ b/_sass/_forms.sass
@@ -10,6 +10,17 @@ form
     border: 1px solid $brand
     padding: 0.5rem
     display: block
+  radio
+.industry
+  // padding: 10px
+  text-transform: uppercase
+  font-size: 2rem
+  color: $theme
+  margin: 0 20px 0 10px
+.form-title
+  font-size: 3.5rem
+  color: $brand
+  text-transform: uppercase
 
 .home-value
   max-width: 50rem
@@ -26,17 +37,20 @@ form
     border: 3px solid $brand
     &:hover
       border: 3px solid $brand-light
-
+.full-width
+  width: 100%
 .contact-form
   width: 100%
   margin-bottom: 0
   input, textarea
-    width: 100%
+    // width: 100%
     border: 1px solid $form-border-color
     @include transition(0.3s)
     &:focus
+      border: 1px solid $brand
       @include placeholder
         color: transparent
+
   textarea
     height: 15rem
   input[type="submit"]
