--- a/_includes/about.html
+++ b/_includes/about.html
@@ -83,7 +83,7 @@
 		{% endfor %}
 		{% endif %}
 
-		<b>{{ site.data.settings.client.brand }}</b>
+		<b>{{ site.data.settings.client.brand }}</b><br>
 		{% if site.data.settings.client.brokerage != null %}
 		{{ site.data.settings.client.brokerage }}<br />
 		{% endif %}
