--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,41 +18,25 @@
 			<li><a href="/">Home</a></li>
 			{% if site.data.settings.show_custom_links == true %}
 				{% for item in site.data.settings.custom_links %}
-      		<li><a href="{{ item.url}}">{{ item.title}}</a></li>
-    		{% endfor %}
+			<li><a href="{{ item.url}}">{{ item.title}}</a></li>
+			{% endfor %}
 			{% endif %}
 			{% if site.data.settings.CTAs.first_CTA_URL != '#contact' and site.data.settings.CTAs.second_CTA_URL != '#contact' %}
-		<li><a href="#contact" id="contact">Contact</a></li>
-		{% endif %}
-
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			{% if site.data.settings.CTAs.first_CTA_text and site.data.settings.CTAs.first_CTA_URL != null %}
-			<li>
-				{% if site.data.settings.CTAs.first_CTA_URL == '/homevalue/' %}
-				<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}">
-					{% elsif site.data.settings.CTAs.first_CTA_URL == '#contact' %}
-					<a class="cta" id="contact" href="#contact">
-					{% else %}
-					<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}" target="_blank">
-					{% endif %}
-					{{site.data.settings.CTAs.first_CTA_text}}
-				</a>
-			</li>
+			<li><a href="#contact" id="contact">Contact</a></li>
 			{% endif %}
-			{% if site.data.settings.CTAs.second_CTA_text and site.data.settings.CTAs.second_CTA_URL != null %}
-			<li>
-				{% if site.data.settings.CTAs.second_CTA_URL == '/homesearch/' %}
-				<a class="cta2" href="{{site.data.settings.CTAs.second_CTA_URL}}">
-					{% elsif site.data.settings.CTAs.second_CTA_URL == '#contact' %}
-					<a class="cta2" id="contact" href="#contact">
-					{% else %}
-				<a class="cta2" href="{{site.data.settings.CTAs.second_CTA_URL}}" target="_blank">
-				{% endif %}
-					{{site.data.settings.CTAs.second_CTA_text}}
-				</a>
-			</li>
-			{% endif %}
-
 		</ul>
+	{% include dropdown.html %}
+	<!-- <div class="dropdown nav navbar-nav navbar-right">
+		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+			Dropdown
+			<span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			<li><a href="#">Action</a></li>
+			<li><a href="#">Another action</a></li>
+			<li><a href="#">Something else here</a></li>
+			<li role="separator" class="divider"></li>
+			<li><a href="#">Separated link</a></li>
+		</ul>
+	</div> -->
 </nav>
