--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -4,7 +4,7 @@
 	min-height: 65px
 	background: transparent
 	width: 100%
-	overflow: hidden
+	overflow: visible
 
 .navbar-andross .navbar-brand
 	color: $brand
@@ -48,7 +48,7 @@
 	.navbar-header
 		a.navbar-brand
 			width: 0
-			overflow: hidden
+			// overflow: hidden
 			display: none
 			opacity: 0
 .scroll-nav-color
@@ -73,3 +73,68 @@
 	+shadow
 	background: $theme
 	animation: .3s fadein ease-in-out
+
+.dropdown
+	overflow: visible !important
+	float: right
+	margin: 10px 0 0 10px
+
+.dropdown-toggle
+	background: $button-background
+	color: $button-text
+	padding: 1.3rem 2rem
+	text-transform: capitalize
+	font-size: 2rem
+	font-weight: 300
+	border: 2px solid $button-border
+	@include transition(0.3s)
+	&:hover
+		background: transparent
+		color: $brand-dark
+		box-shadow: 4px 4px 0 $brand-dark
+		border: 2px solid $button-border
+		@include transform(scale(1.05))
+		@include transform(translateY(-0.2rem))
+	&:active
+		box-shadow: 0 0 0 $brand-dark
+		@include transform(translateY(0rem))
+		text-decoration: none
+		color: #fff
+	&:focus
+		text-decoration: none
+		color: #fff
+
+.dropdown-menu>li
+	background: $button-background
+	color: $button-text
+	padding: 1.3rem 2rem
+	text-transform: capitalize
+	font-size: 2rem
+	font-weight: 300
+	border: 2px solid $button-border
+	@include transition(0.3s)
+	&:hover
+		// background: transparent
+		color: $brand-dark
+		box-shadow: 4px 4px 0 $brand-dark
+		border: 2px solid $button-border
+		@include transform(scale(1.05))
+		@include transform(translateY(-0.2rem))
+	&:active
+		box-shadow: 0 0 0 $brand-dark
+		@include transform(translateY(0rem))
+		text-decoration: none
+		color: #fff
+	&:focus
+		text-decoration: none
+		color: #fff
+
+.dropdown-menu>li>a
+	background: transparent
+	color: $theme
+	&:hover
+		background: transparent
+
+.dropdown-header
+	font-size: 1.5rem
+	font-style: oblique
