--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
 			</div>
 			{% include pagination.html %}
-			<!-- {% include about.html %} -->
+			{% include about.html %}
 			{% include newsletter.html %}
 			{% include testimonials.html %}
 			{% include bottom-navigation.html %}
