--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,42 +1,34 @@
 <div class="container-fluid gray hidden-sm hidden-xs">
-		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1">
-
-				<h4>About {{site.data.settings.client.name}}</h4>
-			</div>
-		</div>
 	<div class="row">
-		<div class="about-container">
-		<div class="col-lg-3 col-md-4 hidden-sm hidden-xs">
-
-				<div class="client-image-container">
-					<img src="{{site.data.settings.images.client_headshot_path }}" alt="{{site.data.settings.client.company}}" class="client-image" />
-				</div><br />
+		<div class="col-md-4">
+			<div class="client-image-container">
+				<img src="{{site.data.settings.images.client_headshot_path }}" alt="{{site.data.settings.client.company}}" class="client-image" />
 			</div>
-		<div class="col-lg-6 col-md-8 hidden-sm hidden-xs about-text">
-			{{site.data.settings.client.about_markdown | markdownify }}
+			<div class="contact-text"><strong>Marcus Green</strong><br>
+			Operating Principal at KW Utah Realtors<br>
+			<a href="tel:801-643-3870">801-643-3870</a><br>
+			<a href="mailto:Marcus@KWutah.com">Marcus@KWutah.com</a>
+			</div>
 		</div>
-		<div class="col-lg-3">
-			<p class="contact-text">
-				<b>{{ site.data.settings.client.name }}</b><br />
-				{% if site.data.settings.client.license_number != null %}
-				{{ site.data.settings.client.license_number }}</br>
-				{% endif %}
-				{{ site.data.settings.client.brand }}<br />
-				{% if site.data.settings.client.brokerage != null %}
-				{{ site.data.settings.client.brokerage }}<br />
-				{% endif %}
-				{{ site.data.settings.client.address }}<br />
-				{% if site.data.settings.client.phone2 != null %}
-				{{ site.data.settings.client.phone_type }}: {{ site.data.settings.client.phone }}<br />
-				{{ site.data.settings.client.phone2_type }}: {{ site.data.settings.client.phone2 }}<br />
-				{% else %}
-				{{ site.data.settings.client.phone }}<br />
-				{% endif %}
-				<a href="mailto:{{ site.data.settings.client.email }}" target="_blank">{{ site.data.settings.client.email }}</a><br />
-				<a href="{{ site.data.settings.client.url }}" target="_blank">{{ site.data.settings.client.url | remove: 'http://' | remove: 'https://' }}</a><br />
-			</p>
+		<div class="col-md-4">
+			<div class="client-image-container">
+				<img src="{{site.data.settings.images.client_headshot_path2 }}" alt="{{site.data.settings.client.company}}" class="client-image" />
+			</div>
+			<div class="contact-text"><strong>Kathy Moore</strong><br>
+			Team Leader/CEO<br>
+			KW Utah Realtors | Midvale, Utah<br>
+			<a href="http://kathymoore.myhomehq.biz/">KathyMoore.MyHomeHQ.biz</a><br>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="client-image-container">
+				<img src="{{site.data.settings.images.client_headshot_path3 }}" alt="{{site.data.settings.client.company}}" class="client-image" />
+			</div>
+			<div class="contact-text"><strong>Marcus Green</strong><br>
+			Team Leader/CEO<br>
+			KW Legacy | Layton, Utah<br>
+			<a href="http://darlenecarter.kwrealty.com">DarleneCarter.KWRealty.com</a>
+			</div>
 		</div>
 	</div>
-</div>
 </div>
