--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@
 				{% include reviews.html %}
 			</div>
 		</div>
-		<!-- {% include about.html%} -->
+		{% include about.html%}
 		{% include newsletter.html %}
 		{% include testimonials.html %}
 		{% include bottom-navigation.html %}
