--- a/_sass/_about.sass
+++ b/_sass/_about.sass
@@ -5,8 +5,8 @@
 	border: 3px solid $brand
 	// margin: 10px auto 0 6rem
 	overflow: hidden
-	display: inline-block
-	margin: auto
+	display: block
+	margin: 20px auto
 
 .client-image
 	max-width: 200px
@@ -23,6 +23,7 @@
 .about-text
 	display: flex
 	flex-direction: column
+	text-align: center
 	p
 		vertical-align: middle
 		margin: auto 0
@@ -35,7 +36,13 @@
 				text-align: center
 				padding-top: 20px
 .contact-text
-	margin: auto
+	font-size: 2rem
+	margin-bottom: 10px
+	text-align: center
+.headshot-name
+	font-size: 2rem
+	font-weigh: 200
+	text-transform: uppercase
 //
 // @media (max-width: 1408px)
 // 	.contact-text
