--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -1,5 +1,5 @@
 .cta
-	background: #0099CC
+	background: $brand
 	color: white
 	padding: 1.3rem 2rem
 	text-transform: capitalize
@@ -24,7 +24,7 @@
 		color: #fff
 
 .cta2
-	// background: $light-text
+	background: $light-text
 	color: white
 	padding: 1.3rem 2rem
 	text-transform: capitalize
