--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -27,7 +27,7 @@
 	padding-bottom: 0
 	margin-bottom: 1rem
 	margin-top: 4rem
-	background: #035874
+	background: $brand
 
 @media (max-width: 1100px)
 	.site-title
