--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
 			<div class="client-image-container">
 				<img src="{{site.data.settings.images.client_headshot_path3 }}" alt="{{site.data.settings.client.company}}" class="client-image" />
 			</div>
-			<div class="contact-text"><strong>Marcus Green</strong><br>
+			<div class="contact-text"><strong>Darlene Carter</strong><br>
 			Team Leader/CEO<br>
 			KW Legacy | Layton, Utah<br>
 			<a href="http://darlenecarter.kwrealty.com">DarleneCarter.KWRealty.com</a>
