--- a/_includes/dropdown.html
+++ b/_includes/dropdown.html
@@ -5,9 +5,9 @@
   </button>
   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
     <li class="dropdown-header">Attend one of our training classes at our offices</li>
-    <li role="separator" class="divider"></li>
-    <li><a href="http://kathymoore.myhomehq.biz/" target="_blank">KW Utah Realtors | Midvale</a></li>
-    <li><a href="http://darlenecarter.kwrealty.com/" target="_blank">KW Legacy | Layton</a></li>
+    <li role="separator" class="divider" id="divider"></li>
+    <li class="link-transform"><a href="http://kathymoore.myhomehq.biz/" target="_blank">KW Utah Realtors | Midvale</a></li>
+    <li class="link-transform"><a href="http://darlenecarter.kwrealty.com/" target="_blank">KW Legacy | Layton</a></li>
   </ul>
 </div>
 <div class="dropdown">
@@ -17,8 +17,8 @@
   </button>
   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
     <li class="dropdown-header">Speak with us about a career at KW:<br>Request a consultation to work in one of our offices.</li>
-    <li role="separator" class="divider"></li>
-    <li><a href="http://kathymoore.myhomehq.biz/" target="_blank">Kathy Moore | Midvale</a></li>
-    <li><a href="http://darlenecarter.kwrealty.com/" target="_blank">Darlene Carter | Layton</a></li>
+    <li role="separator" class="divider" id="divider"></li>
+    <li class="link-transform"><a href="http://kathymoore.myhomehq.biz/" target="_blank">Kathy Moore | Midvale</a></li>
+    <li class="link-transform"><a href="http://darlenecarter.kwrealty.com/" target="_blank">Darlene Carter | Layton</a></li>
   </ul>
 </div>
