--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -24,8 +24,13 @@
 	color: $brand
 	margin-top: 15px
 	&:hover
-		background: transparent
-		color: $brand-light
+		// background: transparent
+		// color: $brand-dark
+		color: $brand-dark
+		box-shadow: 4px 4px 0 $brand-dark
+		border: 2px solid $button-border
+		@include transform(scale(1.05))
+		@include transform(translateY(-0.2rem))
 
 .fa-bars
 	color: $brand
@@ -87,9 +92,10 @@
 	font-size: 2rem
 	font-weight: 300
 	border: 2px solid $button-border
+	border-radius: 0
 	@include transition(0.3s)
 	&:hover
-		background: transparent
+		// background: $button-background
 		color: $brand-dark
 		box-shadow: 4px 4px 0 $brand-dark
 		border: 2px solid $button-border
@@ -99,23 +105,30 @@
 		box-shadow: 0 0 0 $brand-dark
 		@include transform(translateY(0rem))
 		text-decoration: none
-		color: #fff
+		color: $brand
 	&:focus
 		text-decoration: none
-		color: #fff
+		color: $brand
 
 .dropdown-menu>li
 	background: $button-background
 	color: $button-text
-	padding: 1.3rem 2rem
+	padding: 1rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
 	font-weight: 300
 	border: 2px solid $button-border
-	border-radius: 0
 	@include transition(0.3s)
+	// &:hover
+	// 	// background: transparent
+	// 	color: $brand-dark
+	// 	box-shadow: 4px 4px 0 $brand-dark
+	// 	border: 2px solid $button-border
+	// 	// @include transform(scale(1.05))
+	// 	// @include transform(translateY(-0.2rem))
+.link-transform
 	&:hover
-		// background: transparent
+		background: #eeeeee
 		color: $brand-dark
 		box-shadow: 4px 4px 0 $brand-dark
 		border: 2px solid $button-border
@@ -137,10 +150,13 @@
 		background: transparent
 
 .dropdown-header
-	font-size: 1.5rem
+	font-size: 1rem
 	font-style: oblique
+	margin-bottom: -10px
 
 .divider
 	&:hover
 		box-shadow: 0 solid transparent
-		@include transform(scale(1))
+		// @include transform(scale(1))
+#divider
+	margin-bottom: -25px
