Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,6 +75,7 @@
 	        {% include socials.html %}
 	    </div>
 	  </div>
+	  <p class="disclosure">Securities and advisory services offered through FSC Securities Corporation, member FINRA/SIPC. Michigan 401k and Financial Independence are marketing names.</p>
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.brand}}</p>
