--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,6 +19,7 @@
 			{% if site.data.settings.show_custom_links == true %}
 				{% for item in site.data.settings.custom_links %}
       		<li><a href="{{ item.url}}" target="_blank">{{ item.title}}</a></li>
+					<li><a href="/raving-fans.html">Our Raving Fans</a></li>
     		{% endfor %}
 			{% endif %}
 			{% if site.data.settings.CTAs.first_CTA_URL != '#contact' and site.data.settings.CTAs.second_CTA_URL != '#contact' %}
