--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,11 +30,11 @@
 			{% if site.data.settings.CTAs.first_CTA_text and site.data.settings.CTAs.first_CTA_URL != null %}
 			<li>
 				{% if site.data.settings.CTAs.first_CTA_URL == '/homevalue/' %}
-				<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}">
+				<a class="cta2" href="{{site.data.settings.CTAs.first_CTA_URL}}">
 					{% elsif site.data.settings.CTAs.first_CTA_URL == '#contact' %}
-					<a class="cta" id="contact" href="#contact">
+					<a class="cta2" id="contact" href="#contact">
 					{% else %}
-					<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}" target="_blank">
+					<a class="cta2" href="{{site.data.settings.CTAs.first_CTA_URL}}" target="_blank">
 					{% endif %}
 					{{site.data.settings.CTAs.first_CTA_text}}
 				</a>
