--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -15,10 +15,11 @@
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
-	color: $header-font-color
-	text-shadow: $header-shadow
+	color: $brand
+	// text-shadow: $header-shadow
 	text-transform: uppercase
 	font-size: 6.5rem
+	font-weight: 400
 	padding-bottom: 4rem
 	margin-bottom: 0
 
