fixing margin on view all posts button

--- a/_sass/_selection.sass
+++ b/_sass/_selection.sass
@@ -71,7 +71,7 @@
 	padding: 10px 20px
 	border: 1px solid $brand
 	text-align: center
-	margin: auto
+	margin: -10px auto 10px
 	width: auto
 
 	+transition
