Updated '_includes/cta-sidebar.html' via CloudCannon

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,6 @@
+<h3>Learn About Our Compassion Program</h3>
+<iframe src="https://player.vimeo.com/video/208088562" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
