changing colors and logo to remax and new branding

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,7 +1,7 @@
 .hero-img
 	background-position: center
 	background-size: cover
-	padding-top: $nav-height + 5rem
+	padding-top: $nav-height + 3rem
 #hero
 	background-position: center
 	background-size: cover
@@ -19,8 +19,12 @@
 	text-shadow: $header-shadow
 	text-transform: uppercase
 	font-size: 6.5rem
-	padding-bottom: 4rem
+	padding-bottom: 3rem
 	margin-bottom: 0
+
+.broker-logo
+	width: 75%
+	margin-left: 13%
 
 @media (max-width: 1100px)
 	.site-title
@@ -28,13 +32,13 @@
 
 @media (max-width: 1000px)
 	.site-logo
-		max-width: 20rem
+		max-width: 40rem
 
 @media (max-width: 760px)
 	#hero
 		// height: 33rem
 	.site-logo
-		max-width: 20rem
+		max-width: 40rem
 		margin-top: 4rem
 	.site-title
 		font-size: 5rem
@@ -43,7 +47,7 @@
 	#hero
 		// height: 31rem
 	.site-logo
-		max-width: 15rem
+		max-width: 30rem
 		margin-top: 2rem
 	.site-title
 		font-size: 3.5rem
