--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -34,7 +34,7 @@
 					<!-- {% elsif site.data.settings.client.first_CTA_URL == '#contact' %}
 					<a class="cta" id="contact" href="#contact"> -->
 					{% else %}
-					<a class="cta" href="{{site.data.settings.client.first_CTA_URL}}" target="_blank">
+					<a class="cta" href="{{site.data.settings.client.first_CTA_URL}}">
 					{% endif %}
 					{{site.data.settings.client.first_CTA_text}}
 				</a>
