--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,4 +1,6 @@
 <iframe width="360" height="203" src="https://www.youtube.com/embed/WakY40IowH0?rel=0" frameborder="0" allowfullscreen></iframe>
+<h4>Mortage Minute</h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bXwn8OIh9Ck" frameborder="0" allowfullscreen></iframe>
 
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
