--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -1,4 +1,4 @@
-<form method="post" class="home-value" action="http://formspree.io/jamie@getvyral.com" onsubmit="return setReturn()">
+<form method="post" class="home-value" action="http://formspree.io/{{site.data.settings.client.email}}" onsubmit="return setReturn()">
     <fieldset>
         <p id="thanks"></p>
         <!--1-->
