Updated '_includes/about.html' via CloudCannon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,8 @@
 			<div class="client-image-container">
 				<img src="{{site.data.settings.images.client_headshot_path3 }}" alt="{{site.data.settings.client.company}}" class="client-image" />
 			</div>
-			<div class="contact-text"><strong>Bailey</strong><br>
+			<div class="contact-text"><strong>Bailey Hutton</strong><br>
+			RS - 79027<br>
 			</div>
 		</div>
 	</div>
