Updated '_includes/header.html' via CloudCannon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 	{% if page.tags contains "Futurity"%}
 		<div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image4_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
 	{% endif %}
-	{% if page.tags contains "Health Care"%}
+	{% if page.tags contains "Healthcare"%}
 		<div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image5_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
 	{% endif %}
 
