--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -17,8 +17,9 @@
 .site-title
 	color: $theme
 	text-shadow: $header-shadow
-	text-transform: uppercase
+	// text-transform: uppercase
 	font-size: 3.5rem
+	font-weight: 300
 	padding-bottom: 4rem
 	margin-bottom: 0
 
