changing welcome box text

--- a/_sass/_welcome-box.sass
+++ b/_sass/_welcome-box.sass
@@ -9,7 +9,7 @@
 .welcome-box
 	background: $brand
 	padding: 20px 0px
-	color: black
+	color: #fff
 	margin-top: -21px
 	@include shadow
 	margin-bottom: 20px
@@ -23,7 +23,7 @@
 	transform: translateX(0)
 	background: $brand
 	padding: 20px 0px
-	color: black
+	color: #fff
 	margin-bottom: 20px
 	@include shadow
 	padding: 20px 0px
@@ -59,7 +59,7 @@
 	position: absolute
 	right: 1rem
 	top: 1rem
-	color: black
+	color: #fff
 	+transition
 	cursor: pointer
 	&:hover
