--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,6 @@
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uPCYYXil5vI" frameborder="0" allowfullscreen></iframe>
+<br>
+<img src="/img/sellahome.png">
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
