--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,13 +7,19 @@
 		</div>
 	<div class="row">
 		<div class="about-container">
-		<div class="col-lg-3 col-md-4 hidden-sm hidden-xs">
+		<div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
 
 				<div class="client-image-container">
 					<img src="{{site.data.settings.images.client_headshot_path }}" alt="{{site.data.settings.client.company}}" class="client-image" />
 				</div><br />
 			</div>
-		<div class="col-lg-6 col-md-8 hidden-sm hidden-xs about-text">
+		<div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
+
+				<div class="client-image-container">
+					<img src="{{site.data.settings.images.client_headshot2_path }}" alt="{{site.data.settings.client.company}}" class="client-image" />
+				</div><br />
+			</div>
+		<div class="col-lg-5 col-md-4 hidden-sm hidden-xs">
 			{{site.data.settings.client.about_markdown | markdownify }}
 		</div>
 		<div class="col-lg-3">
@@ -22,10 +28,10 @@
 				{% if site.data.settings.client.license_number != null %}
 				{{ site.data.settings.client.license_number }}</br>
 				{% endif %}
-				{{ site.data.settings.client.brand }}<br />
-				{% if site.data.settings.client.brokerage != null %}
-				{{ site.data.settings.client.brokerage }}<br />
-				{% endif %}
+				<!-- {{ site.data.settings.client.brand }}<br /> -->
+				<!-- {% if site.data.settings.client.brokerage != null %} -->
+				<!-- {{ site.data.settings.client.brokerage }}<br /> -->
+				<!-- {% endif %} -->
 				{{ site.data.settings.client.address }}<br />
 				{% if site.data.settings.client.phone2 != null %}
 				{{ site.data.settings.client.phone_type }}: {{ site.data.settings.client.phone }}<br />
