Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -39,7 +39,9 @@
 .navbar
 	padding-right: 15px
 	padding-left: 20px
-	font-weight: 20px
+	font-weight: 30px
+	font-size: 30px
+	text-transform: uppercase
 
 
 @media(max-width: 347px)
