--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -39,9 +39,8 @@
 .navbar
 	padding-right: 15px
 	padding-left: 20px
-	font-weight: 30px
-	font-size: 30px
-	text-transform: uppercase
+	font-weight: 300px
+	text-transform: bold 
 
 
 @media(max-width: 347px)
