Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -39,8 +39,8 @@
 .navbar
 	padding-right: 15px
 	padding-left: 20px
-	font-weight: 300px
-	text-transform: bold 
+	font-weight: 400px
+	text-transform: uppercase 
 
 
 @media(max-width: 347px)
