--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -104,3 +104,4 @@
 <script type="text/javascript" src="/js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="/js/jquery.jplayer.min.js"></script>
 <script type="text/javascript" src="/js/media-player.js"></script>
+<script src="//load.sumome.com/" data-sumo-site-id="6d7b7528a1bc8e97ef4e1e8eb8a0836be89c33c2ff64879ae77a0255afe3584c" async="async"></script>
