Updated '_sass/_navigation.sass' via CloudCannon

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -23,6 +23,7 @@
 	background: transparent
 	color: $brand
 	margin-top: 15px
+	font-weight: 300
 	&:hover
 		background: transparent
 		color: $brand-light
@@ -39,7 +40,7 @@
 .navbar
 	padding-right: 15px
 	padding-left: 20px
-	font-weight: 400px
+	font-weight: 300px
 	text-transform: uppercase 
 	text-shadow: 2px #363336
 
