--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,12 +18,41 @@
 			<li><a href="/">Home</a></li>
 			{% if site.data.settings.show_custom_links == true %}
 				{% for item in site.data.settings.custom_links %}
-			<li><a href="{{ item.url}}">{{ item.title}}</a></li>
-			{% endfor %}
+      		<li><a href="{{ item.url}}">{{ item.title}}</a></li>
+    		{% endfor %}
 			{% endif %}
 			{% if site.data.settings.CTAs.first_CTA_URL != '#contact' and site.data.settings.CTAs.second_CTA_URL != '#contact' %}
-			<li><a href="#contact" id="contact">Contact</a></li>
-			{% endif %}
+		<li><a href="#contact" id="contact">Contact</a></li>
+		{% endif %}
+
 		</ul>
-	{% include dropdown.html %}
+		<ul class="nav navbar-nav navbar-right">
+			{% if site.data.settings.CTAs.first_CTA_text and site.data.settings.CTAs.first_CTA_URL != null %}
+			<li>
+				{% if site.data.settings.CTAs.first_CTA_URL == '/homevalue/' %}
+				<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}">
+					{% elsif site.data.settings.CTAs.first_CTA_URL == '#contact' %}
+					<a class="cta" id="contact" href="#contact">
+					{% else %}
+					<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}" target="_blank">
+					{% endif %}
+					{{site.data.settings.CTAs.first_CTA_text}}
+				</a>
+			</li>
+			{% endif %}
+			{% if site.data.settings.CTAs.second_CTA_text and site.data.settings.CTAs.second_CTA_URL != null %}
+			<li>
+				{% if site.data.settings.CTAs.second_CTA_URL == '/homesearch/' %}
+				<a class="cta" href="{{site.data.settings.CTAs.second_CTA_URL}}">
+					{% elsif site.data.settings.CTAs.second_CTA_URL == '#contact' %}
+					<a class="cta" id="contact" href="#contact">
+					{% else %}
+				<a class="cta" href="{{site.data.settings.CTAs.second_CTA_URL}}" target="_blank">
+				{% endif %}
+					{{site.data.settings.CTAs.second_CTA_text}}
+				</a>
+			</li>
+			{% endif %}
+
+		</ul>
 </nav>
