--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -4,7 +4,7 @@
 	min-height: 65px
 	background: transparent
 	width: 100%
-	overflow: visible
+	overflow: hidden
 
 .navbar-andross .navbar-brand
 	color: $brand
@@ -19,18 +19,28 @@
 	@include transition
 
 .navbar-left>li>a
-	border: 0
-	background: #fff
-	color: $brand
-	margin-top: 15px
+	background: $button-background
+	color: $secondary-button-text
+	padding: 1.3rem 2rem
+	text-transform: capitalize
+	font-size: 2rem
+	margin-top: 12px
+	font-weight: 300
+	border: 2px solid $button-background
+	@include transition(0.3s)
 	&:hover
-		// background: transparent
-		// color: $brand-dark
-		color: $brand-dark
+		background: #eee
+		color: $button-text
 		box-shadow: 4px 4px 0 $brand-dark
-		border: 2px solid $button-border
+		border: 2px solid $secondary-button-border
 		@include transform(scale(1.05))
 		@include transform(translateY(-0.2rem))
+	&:active
+		box-shadow: 0 0 0 $brand-dark
+		@include transform(translateY(0rem))
+	&:focus
+		text-decoration: none
+		color: #fff
 
 .fa-bars
 	color: $brand
@@ -53,7 +63,7 @@
 	.navbar-header
 		a.navbar-brand
 			width: 0
-			// overflow: hidden
+			overflow: hidden
 			display: none
 			opacity: 0
 .scroll-nav-color
@@ -78,85 +88,3 @@
 	+shadow
 	background: $theme
 	animation: .3s fadein ease-in-out
-
-.dropdown
-	overflow: visible !important
-	float: right
-	margin: 10px 0 0 10px
-
-.dropdown-toggle
-	background: $button-background
-	color: $button-text
-	padding: 1.3rem 2rem
-	text-transform: capitalize
-	font-size: 2rem
-	font-weight: 300
-	border: 2px solid $button-border
-	border-radius: 0
-	@include transition(0.3s)
-	&:hover
-		// background: $button-background
-		color: $brand-dark
-		box-shadow: 4px 4px 0 $brand-dark
-		border: 2px solid $button-border
-		@include transform(scale(1.05))
-		@include transform(translateY(-0.2rem))
-	&:active
-		box-shadow: 0 0 0 $brand-dark
-		@include transform(translateY(0rem))
-		text-decoration: none
-		color: $brand
-	&:focus
-		text-decoration: none
-		color: $brand
-
-.dropdown-menu>li
-	background: $button-background
-	color: $button-text
-	padding: 1rem 2rem
-	text-transform: capitalize
-	font-size: 2rem
-	font-weight: 300
-	border: 2px solid $button-border
-	@include transition(0.3s)
-	// &:hover
-	// 	// background: transparent
-	// 	color: $brand-dark
-	// 	box-shadow: 4px 4px 0 $brand-dark
-	// 	border: 2px solid $button-border
-	// 	// @include transform(scale(1.05))
-	// 	// @include transform(translateY(-0.2rem))
-.link-transform
-	&:hover
-		background: #eeeeee
-		color: $brand-dark
-		box-shadow: 4px 4px 0 $brand-dark
-		border: 2px solid $button-border
-		@include transform(scale(1.05))
-		@include transform(translateY(-0.2rem))
-	&:active
-		box-shadow: 0 0 0 $brand-dark
-		@include transform(translateY(0rem))
-		text-decoration: none
-		color: #fff
-	&:focus
-		text-decoration: none
-		color: #fff
-
-.dropdown-menu>li>a
-	background: transparent
-	color: $theme
-	&:hover
-		background: transparent
-
-.dropdown-header
-	font-size: 1rem
-	font-style: oblique
-	margin-bottom: -10px
-
-.divider
-	&:hover
-		box-shadow: 0 solid transparent
-		// @include transform(scale(1))
-#divider
-	margin-bottom: -25px
