--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
 
  	<div id="navbarCollapse" class="collapse navbar-collapse">
 		<ul class="nav navbar-nav navbar-left">
-			<li><a href="/">Home</a></li>
+			<li><a href="http://ccadvisors.com">Home</a></li>
 			{% if site.data.settings.show_custom_links == true %}
 				{% for item in site.data.settings.custom_links %}
       		<li><a href="{{ item.url}}">{{ item.title}}</a></li>
