--- a/_includes/blog-archive-category.html
+++ b/_includes/blog-archive-category.html
@@ -1,5 +1,5 @@
   <div class="library-container">
-			<h5>Post Library</h5>
+			<h5>Navigation</h5>
 			<hr>
 			{% for tag in site.tags %}
 					<div class="catbloc" id="{{ tag | first | remove:' ' }}">
