--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,4 @@
+<h4>See My Latest Endorsement from Real Estate Guru Barbara Corcoran</h4>
 <iframe width="360" height="203" src="https://www.youtube.com/embed/WakY40IowH0?rel=0" frameborder="0" allowfullscreen></iframe>
 <h4>Mortgage Minute</h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bXwn8OIh9Ck" frameborder="0" allowfullscreen></iframe>
