--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -2,7 +2,7 @@
 <div class="newsletter">
       <div class="news-column-left">
         <h2>Sign Up for Our Newsletter</h2>
-        <p>Get up-to-date Real Estate news and tips every month</p>
+        <p>Subscribe to this blog to get the latest news on finance and receive expert tips for preparing yourself for your financial future.</p>
 			</div>
 				<div class="news-col-right">
 
