--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -3,6 +3,11 @@
 <h4>Mortgage Minute</h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bXwn8OIh9Ck" frameborder="0" allowfullscreen></iframe>
 
+<hr>
+<a href="/radio-show"><h4>Palm Beach Real Estate Podcast</h4></a>
+<a href="/radio-show"><img src="/img/cover.jpg" width="100%"></a>
+<hr>
+
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
