moved raving fans videos, testimonials, updated cover photo, added podcast cover image, cleaned post tags

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,4 @@
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nBLAw-RYqdc" frameborder="0" allowfullscreen></iframe>
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
