navbar, adding kw success office, taking off links at top, adding kw logo to left of savvy agent logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,15 +11,20 @@
 	    </div>
 	    <hr>
 	    <div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-4">
 					<a href="http://darlenecarter.kwrealty.com/" target="_blank" class="branch">KW Utah Realtors</a>
-					<address class="address" itemprop="address">6965 Union Park Center Suite 160 Midvale, UT 84047 USA</address>
+					<address class="address" itemprop="address">6965 Union Park Center Suite 160<br>Midvale, UT 84047</address>
 					<a href="tel:801-858-3105" itemprop="telephone">801-858-3105</a>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-4">
 					<a href="http://kathymoore.myhomehq.biz/" target="_blank" class="branch">KW Legacy</a>
-					<address class="address" itemprop="address">1572 Woodland Park Dr Ste 505 , Layton, UT 84041</address>
+					<address class="address" itemprop="address">1572 Woodland Park Dr Ste 505<br>Layton, UT 84041</address>
 					<a href="tel:801-309-1844" itemprop="telephone">801-309-1844</a>
+				</div>
+				<div class="col-sm-4">
+					<a href="https://www.utahrealestatevalue.com/" target="_blank" class="branch">KW Success</a>
+					<address class="address" itemprop="address">5711 S. 1475 E<br>Ogden, UT 84403</address>
+					<a href="tel:801-686-8043" itemprop="telephone">801-686-8043</a>
 				</div>
 	    </div>
 	    <div class="row">
