--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -1,6 +1,30 @@
 .cta
 	background: $button-background
 	color: $button-text
+	// padding: 1.3rem 2rem
+	text-transform: capitalize
+	font-size: 2rem
+	font-weight: 300
+	// border: 2px solid $button-border
+	// @include transition(0.3s)
+	&:hover
+		background: #eeeeee
+		color: $brand-dark
+		border-bottom: 2px solid $brand
+		// @include transform(scale(1.05))
+		// @include transform(translateY(-0.2rem))
+	&:active
+		// box-shadow: 0 0 0 $brand-dark
+		// @include transform(translateY(0rem))
+		text-decoration: none
+		color: $brand
+	&:focus
+		text-decoration: none
+		color: $brand
+
+.cta3
+	background: $button-background
+	color: $button-text
 	padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
@@ -18,10 +42,10 @@
 		box-shadow: 0 0 0 $brand-dark
 		@include transform(translateY(0rem))
 		text-decoration: none
-		color: #fff
+		color: $brand
 	&:focus
 		text-decoration: none
-		color: #fff
+		color: $brand
 
 .cta2
 	background: $theme
@@ -47,10 +71,10 @@
 		color: #fff
 .navbar-nav>li>a
 	font-size: 20px
-	margin-top: 12px
-	padding: $button-padding-height $button-padding-width
+	// margin-top: 12px
+	// padding: $button-padding-height $button-padding-width
 	border-radius: $button-radius
-	@include transition
+	// @include transition
 	&:active
 		text-decoration: none
 		color: #fff
