--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -30,7 +30,7 @@
 .navbar-andross
 	.navbar-brand
 		color: #fff
-		margin-top: 10px
+		// margin-top: 10px
 #side-logo
 	width: 90%
 	margin: 0 auto
