--- a/_includes/contact-modal.html
+++ b/_includes/contact-modal.html
@@ -39,6 +39,7 @@
     <form class="contact-form" method="post" action="http://formspree.io/{{site.data.settings.client.email}}">
       <input type="text" name="name" placeholder="*Name" required>
       <input type="email" name="_replyto" placeholder="*Email" required>
+      <input type="text" name="phone" placeholder="Phone">
       <textarea name="Message" placeholder="Optional Message"></textarea>
       <!-- Cloud cannon settings field -->
       <div class="hidden">
