--- a/_includes/contact-modal.html
+++ b/_includes/contact-modal.html
@@ -36,7 +36,7 @@
 
     <i class="fa fa-times-circle fa-2x exit" aria-hidden="true"></i>
 
-    <form class="contact-form" method="post" action="http://formspree.io/{{site.data.settings.client.email}}">
+    <form class="contact-form" method="post" action="http://formspree.io/askdave@davefriedmanteam.com">
       <input type="text" name="name" placeholder="*Name" required>
       <input type="email" name="_replyto" placeholder="*Email" required>
       <input type="text" name="phone" placeholder="Phone">
