--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -38,3 +38,10 @@
 	&:hover
 		@include transform(scale(1.05))
 		@include transform(translateY(-0.2rem))
+
+.radio-tag
+	font-size: 20px
+	color: #B52129
+	list-style: none
+	padding-left: 30px
+	font-weight: bold
