--- a/_sass/_welcome-box.sass
+++ b/_sass/_welcome-box.sass
@@ -8,7 +8,9 @@
 
 .welcome-box
 	background: #fff
-	// background-image: url({{ site.data.settings.images.hero_image_path }})
+	background-image: url(/img/background.jpg)
+	border-top: 1px solid #000
+	border-bottom: 1px solid #000
 	padding: 20px 0px
 	color: #000
 	margin-top: -21px
