Updated '_includes/contact-modal.html' via CloudCannon

--- a/_includes/contact-modal.html
+++ b/_includes/contact-modal.html
@@ -36,14 +36,14 @@
 
     <i class="fa fa-times-circle fa-2x exit" aria-hidden="true"></i>
 
-    <form class="contact-form" method="post" action="http://formspree.io/{{site.data.settings.client.email}}">
+    <form class="contact-form" method="post" action="http://formspree.io/evan@davefriedmanteam.com">
       <input type="text" name="name" placeholder="*Name" required>
       <input type="email" name="_replyto" placeholder="*Email" required>
       <input type="text" name="phone" placeholder="Phone">
       <textarea name="Message" placeholder="Optional Message"></textarea>
       <!-- Cloud cannon settings field -->
       <div class="hidden">
-        <input type="hidden" name="_to" value="{{site.data.settings.client.email}}">
+        <input type="hidden" name="_to" value="evan@davefriedmanteam.com">
         <input type="hidden" name="_subject" value="New Real Estate Video Plan Request">
         <input type="text" name="_gotcha">
       </div>
