--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -35,3 +35,13 @@
 #kw
 	width: 80%
 	margin-left: 10%
+
+.client-testimonial
+	margin-top: 10px
+
+.testimonial-text
+	font-style: italic
+
+.testimonial-author
+	color: #b40101
+	margin-top: -20px
