--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,6 +75,7 @@
 	        {% include socials.html %}
 	    </div>
 	  </div>
+		<img src="/img/kw.png" style="width: 50px; margin-bottom: 10px;">
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.brand}}</p>
