--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -29,7 +29,7 @@
 	border: 2px solid $button-border
 	@include transition(0.3s)
 	&:hover
-		background: transparent
+		background: #eee
 		color: $brand-dark
 		box-shadow: 4px 4px 0 $brand-dark
 		border: 2px solid $button-border
